<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <ImageView
        android:id="@+id/coverImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/infoContainer"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover"/>

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_standard"
        android:paddingVertical="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/coverImageView"
        android:layout_marginTop="-8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playbackControlsContainer">

        <TextView
            android:id="@+id/trackTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:gravity="center"
            android:text="@string/play_track_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:gravity="center"
            android:text="@string/artist"
            android:textColor="#B0B0B0"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playbackControlsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_standard"
        app:layout_constraintTop_toBottomOf="@id/infoContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="@dimen/margin_bottom_player">

        <ImageView
            android:id="@+id/prevButton"
            android:layout_width="@dimen/play_icon_width"
            android:layout_height="@dimen/play_icon_height"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous" />

        <FrameLayout
            android:id="@+id/playbackButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small">
            <ImageView
                android:id="@+id/playButton"
                android:layout_width="@dimen/play_icon_width"
                android:layout_height="@dimen/play_icon_height"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play" />
            <ImageView
                android:id="@+id/pauseButton"
                android:layout_width="@dimen/play_icon_width"
                android:layout_height="@dimen/play_icon_height"
                android:contentDescription="@string/pause"
                android:src="@drawable/ic_pause"
                android:visibility="gone" />
        </FrameLayout>

        <ImageView
            android:id="@+id/nextButton"
            android:layout_width="@dimen/play_icon_width"
            android:layout_height="@dimen/play_icon_height"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
