<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/search_card_corner_radius"
        app:cardBackgroundColor="@color/search_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_standard"
        android:elevation="@dimen/search_card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_standard"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="@dimen/search_icon_width"
                android:layout_height="@dimen/search_icon_height"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                android:hint="@string/search"
                android:background="@android:color/transparent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="text"
                android:layout_weight="1"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:padding="@dimen/padding_standard"
        app:layout_constraintTop_toBottomOf="@id/search_card"
        app:layout_constraintBottom_toTopOf="@+id/navigation_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/track_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <LinearLayout
        android:id="@+id/navigation_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navigation_background"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/padding_small">

            <ImageView
                android:id="@+id/nav_home_icon"
                android:layout_width="@dimen/nav_icon_width"
                android:layout_height="@dimen/nav_icon_height"
                android:src="@drawable/ic_home"
                android:contentDescription="@string/home" />

            <TextView
                android:id="@+id/nav_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_downloaded"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/padding_small">

            <ImageView
                android:id="@+id/nav_downloaded_icon"
                android:layout_width="@dimen/nav_icon_width"
                android:layout_height="@dimen/nav_icon_height"
                android:src="@drawable/ic_downloaded"
                android:contentDescription="@string/downloaded" />

            <TextView
                android:id="@+id/nav_downloaded_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloaded"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
